updated release with new content

--- a/presentation.tex
+++ b/presentation.tex
@@ -326,7 +326,7 @@ Lynis security scan details:
     \item Formaliser l'identification des éqiupements logiciels, matériels
     \item Formaliser une vulnérabilité et son écosystème (risque, complexité,
       cible, etc.)
-    \item Définir un ensemble de languages pour définir, sans prendre
+    \item Définir un ensemble de langages pour définir, sans prendre
       d'hypothèse sur le logiciel ou matériel cible:
       \begin{itemize}
         \item une fiche de test
@@ -646,7 +646,7 @@ Lynis security scan details:
         \end{itemize}
        \item Bien que SCAP soit basé sur un ensemble de standards, les fiches OVAL ou les STIGs ne sont pas toujours interopérables
           \begin{itemize}
-            \item Cetains éditeurs, comme CIS, enrichissent le language
+            \item Cetains éditeurs, comme CIS, enrichissent le langage
             \item La compréhention de la norme peut varier selon les implémentations
         \end{itemize}
     \end{itemize}
@@ -862,7 +862,7 @@ ID | Timestamp           | Status
     \begin{itemize}
 	    \item Des politiques de sécurités de plus haut niveau (comme celles du NIST) peuvent impliquer plusieurs STIGs
 	    \item Les STIGs peuvent impliquer des niveaux de durcissement variables selon le profil
-	    \item Afin de ne pas multiplier les fiches OVAL, le language permet l'usage de variables, qu'on dénote sélecteur
+	    \item Afin de ne pas multiplier les fiches OVAL, le langage permet l'usage de variables, qu'on dénote sélecteur
     \end{itemize}
   \end{block}
 	\begin{block}{Ecrire une fiche avec des sélecteurs}
@@ -1259,7 +1259,7 @@ Rule rationale explanation.
 \subsection{Bibliographie et liens utiles}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%% Frame %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}[t]
+%\begin{frame}[t]
 %  \frametitle{Livres et articles sur Android et sa sécurité}
 %  \begin{itemize}
 %    \item Nikolay Elenkov,  {\it Android Security Internals: An In-Depth Guide to Android's
@@ -1270,7 +1270,7 @@ Rule rationale explanation.
 %  de backdoors ciblées} - Actes du SSTIC 2013
 %\item Nicolas Ruff, {\it Sécurité du système Android} - Actes du SSTIC 2011
 %  \end{itemize}
-\end{frame}
+%\end{frame}
 
 \backupend
 
